# NeuronCite

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
clients/python/: CHANGELOG.md  README.md  pyproject.toml
clients/python/neuroncite/: __init__.py  client.py  models.py  server.py
clients/python/tests/: conftest.py  test_client.py  test_server.py
crates/neuroncite/: Cargo.toml  build.rs
crates/neuroncite-annotate/: Cargo.toml
crates/neuroncite-annotate/src/: annotate.rs  appearance.rs  error.rs  input.rs  inspect.rs  lib.rs  locate.rs  pipeline.rs  remove.rs  report.rs  resolve.rs  types.rs  verify.rs
crates/neuroncite-api/: Cargo.toml
crates/neuroncite-api/src/: agent.rs  dto.rs  error.rs  executor.rs  html_indexer.rs  lib.rs  openapi.rs  router.rs  state.rs  test_support.rs  util.rs  worker.rs
crates/neuroncite-api/src/handlers/: annotate.rs  backends.rs  chunks.rs  citation.rs  compare.rs  discover.rs  documents.rs  health.rs  index.rs  jobs.rs  mod.rs  quality.rs  search.rs  sessions.rs  shutdown.rs  verify.rs
crates/neuroncite-api/src/indexer/: batch.rs  mod.rs  pipeline.rs  stdio.rs
crates/neuroncite-api/src/middleware/: api_version.rs  auth.rs  cors.rs  mod.rs  security_headers.rs
crates/neuroncite-api/src/service/: index.rs  mod.rs
crates/neuroncite-chunk/: Cargo.toml
crates/neuroncite-chunk/proptest-regressions/: property_tests.txt
crates/neuroncite-chunk/src/: abbreviations.rs  error.rs  lib.rs  normalize.rs  offset.rs  page.rs  property_tests.rs  sentence.rs  token_window.rs  word_window.rs
crates/neuroncite-citation/: Cargo.toml
crates/neuroncite-citation/src/: batch.rs  bibtex.rs  db.rs  error.rs  export.rs  latex.rs  lib.rs  types.rs
crates/neuroncite-core/: Cargo.toml
crates/neuroncite-core/src/: config.rs  disk.rs  error.rs  lib.rs  math.rs  offset.rs  paths.rs  time.rs  traits.rs  types.rs
crates/neuroncite-embed/: Cargo.toml
crates/neuroncite-embed/src/: cache.rs  error.rs  lib.rs  normalize.rs  registry.rs  tokenize.rs
crates/neuroncite-embed/src/ort/: embedder.rs  mod.rs  reranker.rs  session.rs
crates/neuroncite-html/: Cargo.toml
crates/neuroncite-html/src/: crawl.rs  download.rs  error.rs  fetch.rs  lib.rs  parse.rs  resolve.rs  ssrf.rs  types.rs
crates/neuroncite-llm/: Cargo.toml
crates/neuroncite-llm/src/: error.rs  lib.rs  ollama.rs  types.rs
crates/neuroncite-mcp/: Cargo.toml
crates/neuroncite-mcp/src/: dispatch.rs  lib.rs  protocol.rs  registration.rs  server.rs  tools.rs  transport.rs
crates/neuroncite-mcp/src/handlers/: annotate.rs  annotate_status.rs  batch_content.rs  batch_search.rs  bib_report.rs  chunks.rs  citation.rs  common.rs  compare.rs  compare_search.rs  content.rs  discover.rs  export.rs  files.rs  html_crawl.rs  html_fetch.rs  index.rs  index_add.rs  inspect.rs  jobs.rs  mod.rs  models.rs  multi_search.rs  preview_chunks.rs  quality.rs  reindex.rs  remove.rs  reranker.rs  search.rs  session_diff.rs  sessions.rs  source_fetch.rs  system.rs  text_search.rs
crates/neuroncite-pdf/: Cargo.toml
crates/neuroncite-pdf/src/: deps.rs  discovery.rs  error.rs  lib.rs  ocr.rs  pdfium_binding.rs  quality.rs
crates/neuroncite-pdf/src/extract/: mod.rs  pdf_extract.rs  pdfium.rs
crates/neuroncite-pipeline/: Cargo.toml
crates/neuroncite-pipeline/src/: context.rs  executor.rs  lib.rs  test_support.rs  worker.rs
crates/neuroncite-pipeline/src/indexer/: batch.rs  mod.rs  pipeline.rs  stdio.rs
crates/neuroncite-search/: Cargo.toml
crates/neuroncite-search/src/: citation.rs  dedup.rs  error.rs  fusion.rs  keyword.rs  lib.rs  pipeline.rs  refine.rs  vector.rs
crates/neuroncite-store/: Cargo.toml
crates/neuroncite-store/src/: error.rs  lib.rs  manifest.rs  pool.rs  schema.rs
crates/neuroncite-store/src/index/: external.rs  fts.rs  hnsw.rs  mod.rs
crates/neuroncite-store/src/repo/: aggregate.rs  annotation_status.rs  chunk.rs  diff.rs  file.rs  mod.rs  page.rs  session.rs  web_source.rs
crates/neuroncite-store/src/workflow/: idempotency.rs  job.rs  mod.rs
crates/neuroncite-testgen/: Cargo.toml
crates/neuroncite-testgen/src/: cid_range_panic.rs  main.rs  type1_font_panic.rs  xref_corruption.rs
crates/neuroncite-web/: Cargo.toml  build.rs
crates/neuroncite-web/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/neuroncite-web/frontend/src/: App.tsx  global.d.ts  index.tsx
crates/neuroncite-web/frontend/src/__tests__/: citation-panel-logic.test.ts  index-status-logic.test.ts  log-messages.test.ts  source-fetch-logic.test.ts  update-check-logic.test.ts
crates/neuroncite-web/frontend/src/api/: client.ts  sse.ts  types.ts
crates/neuroncite-web/frontend/src/components/layout/: ChunkViewer.tsx  SearchTab.tsx  (+6 more)
crates/neuroncite-web/frontend/src/stores/: app.ts
crates/neuroncite-web/frontend/src/styles/: animations.css  base.css  components.css  layout.css  tokens.css
crates/neuroncite-web/frontend/src/utils/: a11y.ts  logger.ts  path.ts  url.ts
crates/neuroncite-web/src/: assets.rs  broadcast_layer.rs  browser.rs  lib.rs  middleware.rs  native_window.rs  splash.rs  sse.rs
crates/neuroncite-web/src/handlers/: browse.rs  config.rs  doctor.rs  mcp.rs  mod.rs  model_doctor.rs  models.rs  ollama.rs  setup.rs  update.rs
crates/neuroncite/assets/: Info.plist  NeuronCite.entitlements  icon.icns
crates/neuroncite/benches/: bm25_query.rs  embedding_cpu.rs  hnsw_construction.rs  hnsw_query.rs  pdf_extraction.rs
crates/neuroncite/src/: main.rs
crates/neuroncite/tests/: integration_tests.rs  property_tests.rs  regression_tests.rs
crates/neuroncite/tests/common/: mod.rs
crates/neuroncite/tests/integration/: cli.rs  mod.rs  ocr_fallback.rs  pipeline.rs  real_pdf.rs  search.rs  server.rs
crates/neuroncite/tests/property/: chunking_properties.rs  embedding_properties.rs  mod.rs  search_properties.rs
crates/neuroncite/tests/regression/: edge_cases.rs  mod.rs
(+43 files in other folders)
