# neuroncite-pipeline: Background job executor, GPU worker, and indexing pipeline.
# Extracted from neuroncite-api to enable independent compilation and testing.
# The PipelineContext trait decouples the pipeline from the concrete AppState.

[package]
name = "neuroncite-pipeline"
description = "Background job executor, GPU worker, and indexing pipeline for NeuronCite"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
neuroncite-core = { workspace = true }
neuroncite-store = { workspace = true }
neuroncite-chunk = { workspace = true }
neuroncite-html = { workspace = true }
neuroncite-pdf = { workspace = true }
neuroncite-search = { workspace = true }
neuroncite-annotate = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
arc-swap = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
