# neuroncite-store: SQLite schema management, connection pooling, and persistent
# storage for sessions, files, pages, chunks, embeddings, and workflow state.
# Organized into three internal layers: repository (CRUD), index (HNSW, FTS5,
# external embeddings), and workflow (job tracking, idempotency).

[package]
name = "neuroncite-store"
description = "SQLite storage, HNSW index management, and workflow tracking for the NeuronCite workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
neuroncite-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

# SQLite with the bundled compilation feature so the build carries its own
# copy of SQLite and does not depend on a system-installed library.
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# HNSW approximate nearest neighbor graph for vector similarity search
hnsw_rs = { workspace = true }

# Atomic pointer swap for lock-free hot-reloading of the HNSW index
arc-swap = { workspace = true }

# Memory-mapped file I/O for the external embeddings storage mode
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
